force-app/main/default/objects/Sell_Through_Report_Header__c/Sell_Through_Report_Header__c.object-meta.xml
<CustomObject>
    <label>Sell Through Report File</label>
    <nameField>
        <label>Sell Through Report File</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sell Through Report Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>