force-app/main/default/objects/Sell_Through_Report_Header__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Sell_Through_Report_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>