force-app/main/default/objects/Sell_Through_Report_Header__c/fields/Import_File__c.field-meta.xml
<CustomField>
    <fullName>Import_File__c</fullName>
    <externalId>true</externalId>
    <label>Import File</label>
    <length>255</length>
    <type>Text</type>
</CustomField>