force-app/main/default/objects/Sell_Through_Report_Header__c/fields/View_Sell_Through_Report__c.field-meta.xml
<CustomField>
    <fullName>View_Sell_Through_Report__c</fullName>
    <formula>HYPERLINK(&quot;/one/one.app#/sObject/00O78000000KBmIEAW/view?fv0=&quot;&amp;Id,
&quot;View Detail&quot;)</formula>
    <label>View Sell Through Report</label>
    <type>Text</type>
</CustomField>